# latexnotes2pdfpresxml

./: README  latexnotes2pdfpresxml.cabal
src/: Main.hs  Main.hs~  NoteOperation.hs
src/.svn/: entries
src/.svn/text-base/: FileOperation.hs.svn-base  FileOperation_.hs.svn-base  FileOperation_chris_help.hs.svn-base  Main.hs.svn-base  Operation.hs.svn-base
